# ClipStash

./: Cargo.toml  README.md
src/: history.rs  main.rs  preferences.rs  ui.rs  window.rs
